tests/integration/commands/snapshots/integration__commands__format__ARRAY_EMPTY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[]
stdout ---
[]

stderr ---
