tests/integration/commands/snapshots/integration__commands__format__ARRAY_MANY.snap
---
source: tests/integration/commands/format.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
[1, 2, 3]
stdout ---
[
    1,
    2,
    3
]

stderr ---
